<resources>
    <string name="app_name">Bikebuddy</string>
    <string name="title_activity_tabs">TabsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchHint">Where are you going to?</string>
    <string name="sortByDistance">Distance</string>
    <string name="sortByBonuspoints">Bonuspoints</string>

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <!-- Search activity -->
    <string name="radius_field">Radius to search for bonus location</string>
    <string name="order_criteria">Order criteria</string>
    <string name="radio_points">Bonuspoints</string>
    <string name="radio_distance">Distance</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="btn_search">Search</string>

    <!-- User fragment -->
    <string name="user_fragment_score">Score</string>
    <string name="user_fragment_rank">Rank</string>
    <string name="user_fragment_points">Points</string>

    <!-- Detail activity -->
    <string name="qr_text">When you return your bike, scan the QR code on the display to receive bonus points</string>

    <!-- REST-SERVER -->
    <string name="rest_login">http://n091-vm26-10.wall2.ilabt.iminds.be/auth/login</string>
    <string name="rest_register">http://n091-vm26-10.wall2.ilabt.iminds.be/auth/register</string>
    <string name="rest_stations">http://n091-vm26-10.wall2.ilabt.iminds.be/stations</string>
    <string name="rest_scoreboard">http://n091-vm26-10.wall2.ilabt.iminds.be/scoreboard</string>
    <string name="rest_profile">http://n091-vm26-10.wall2.ilabt.iminds.be/profile</string>
    <string name="rest_scan">http://n091-vm26-10.wall2.ilabt.iminds.be/scan</string>

    <string name="available_bikes">Available bikes:</string>
    <string name="offline">Feature not available offline</string>
    <string name="loading_bikestations">Click to load more bikestations...</string>
    <string name="loading_have_patience">Loading...</string>

</resources>
