<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/search_text_a"
        android:text="@string/radius_field"/>

    <TextView
        android:id="@+id/radius_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"/>

    <SeekBar
        android:id="@+id/seekbar_radius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/search_text_a"
        android:text="@string/order_criteria"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium">
        <RadioButton android:id="@+id/radio_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_points"
            android:checked="true"/>
        <RadioButton android:id="@+id/radio_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_distance"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/fab_accent"
        android:textColor="@color/btn_search_text"
        android:text="@string/btn_search"
        android:onClick="SearchSubmit"/>


</LinearLayout>