<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ugent.groep3.bikebuddy.fragments.UserFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="Name"
            android:textSize="30dp"
            android:id="@+id/userFragmentName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/user_fragment_score"
            android:textSize="17dp"
            android:id="@+id/textScore"
            android:autoText="false"
            android:textColor="#ffa4a4a4" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user_fragment_rank"
                    android:textSize="20dp"
                    android:layout_gravity="left"
                    android:id="@+id/UserFragmentRank"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="220dp"
                    android:layout_marginRight="0dp"
                    android:text="-1"
                    android:textSize="20dp"
                    android:layout_gravity="right"
                    android:id="@+id/UserFragmentRankNr"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user_fragment_points"
                    android:textSize="20dp"
                    android:id="@+id/UserFragmentPoints"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="208dp"
                    android:layout_marginRight="0dp"
                    android:text="-1"
                    android:textSize="20dp"
                    android:layout_gravity="right"
                    android:id="@+id/UserFragmentPointsNr"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="1 free day is 10 points"
                android:textSize="20dp"
                android:id="@+id/textFreePoints"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="free days"
                android:textSize="20dp"
                android:id="@+id/UserFragmentFreeDays"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exchange"
                android:id="@+id/UserFragmentExchangeButton"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textSize="20dp"
            android:id="@+id/textContact" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textSize="20dp"
            android:id="@+id/textAdress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textSize="20dp"
            android:id="@+id/textTelephone" />
    </LinearLayout>
</FrameLayout>
